--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Your Name's Website</title>
+    <title>KinesiOS</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -14,20 +14,24 @@
                 <div class="columns is-vcentered is-centered">
                     <div class="column is-6">
                         <div class="block">
-                            <h1 class="title is-2">Welcome to Your Name's Website.</h1>
+                            <h1 class="title is-2">KinesiOS</h1>
                         </div>
                         <div class="block">
-                            <h2 class="subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting
-                                industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                                when an unknown printer took a galley of type and scrambled it to make a type specimen
-                                book.<br>
+                            <h2 class="subtitle">O KinesiOS é um sistema de telereabilitação e reconhecimento
+                                de movimentos para avaliação motora e neurofuncional de pacientes em reabilitação
+                                pós-acidente vascular cerebral.<br>
                             </h2>
+
+                            <h3>
+                                Para suporte ou liberação de acesso ao sistema, envie um e-mail para
+                                bioxthica@gmail.com.
+                            </h3>
                         </div>
                         <div class="block buttons">
-                            <a href="https://facebook.com/"><button class="button is-white is-outlined">Visit my
-                                    Facebook</button></a> &nbsp;
-                            <a href="https://twitter.com/"><button class="button is-white is-outlined">Visit my
-                                    Twitter</button></a>
+                            <a href="https://facebook.com/"><button
+                                    class="button is-white is-outlined">Download</button></a> &nbsp;
+                            <a href="https://www.brainn.org.br/"><button class="button is-white is-outlined">Visite o
+                                    site do BRAINN</button></a>
                         </div>
                     </div>
                 </div>
