--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>KinesiOS</title>
+    <title>KinesiOS - One Version</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -14,7 +14,7 @@
                 <div class="columns is-vcentered is-centered">
                     <div class="column is-6">
                         <div class="block">
-                            <h1 class="title is-2">KinesiOS</h1>
+                            <h1 class="title is-2">KinesiOS - One Version</h1>
                         </div>
                         <div class="block">
                             <h2 class="subtitle">O KinesiOS é um sistema de telereabilitação e reconhecimento
@@ -24,12 +24,12 @@
 
                             <h3>
                                 Para suporte ou liberação de acesso ao sistema, envie um e-mail para
-                                bioxthica@gmail.com.
+                                <a href="mailto:bioxthica@gmail.com"></a>
                             </h3>
                         </div>
                         <div class="block buttons">
-                            <a href="https://facebook.com/"><button
-                                    class="button is-white is-outlined">Download</button></a> &nbsp;
+                            <a href="https://filebin.net/xw803wa254iwpwa1/KinesiOSSetup.exe"><button
+                                    class="button is-white is-outlined" download>Download</button></a> &nbsp;
                             <a href="https://www.brainn.org.br/"><button class="button is-white is-outlined">Visite o
                                     site do BRAINN</button></a>
                         </div>
