--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                             <h3>
                                 Para suporte ou liberação de acesso ao sistema, envie um e-mail para
-                                <a href="mailto:bioxthica@gmail.com"></a>
+                                <a href="mailto:bioxthica@gmail.com"> bioxthica@gmail.com</a>
                             </h3>
                         </div>
                         <div class="block buttons">
