--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                             </h3>
                         </div>
                         <div class="block buttons">
-                            <a href="https://github.com/LRScudeletti/kinesios/archive/refs/tags/1.0.10.zip"><button
+                            <a
+                                href="https://github.com/LRScudeletti/kinesios/releases/download/1.0.10/KinesiOSSetup.exe"><button
                                     class="button is-white is-outlined" download>Download</button></a> &nbsp;
                         </div>
                     </div>
