--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="block buttons">
                             <a
-                                href=https://github.com/LRScudeletti/kinesios/releases/download/v1.0.10/KinesiOSSetup.exe"><button
+                                href="https://github.com/LRScudeletti/kinesios/releases/download/v1.0.11/KinesiOSSetup1.0.11.exe"><button
                                     class="button is-white is-outlined" download>Download</button></a> &nbsp;
                         </div>
                     </div>
