--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                                 de movimentos para avaliação motora e neurofuncional de pacientes em reabilitação
                                 pós-acidente vascular cerebral.<br>
                             </h2>
+                            
+                            <h2>
+                                Apresentação do KinesiOS na XR Experience do SVR2021 <br>
+                                 https://www.youtube.com/watch?v=C_QtT2FG7rg
+                            </h2>
 
                             <h3>
                                 Para suporte ou liberação de acesso ao sistema, envie um e-mail para
