--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
                                 de movimentos para avaliação motora e neurofuncional de pacientes em reabilitação
                                 pós-acidente vascular cerebral.<br>
                             </h2>
-                            
                             <h2>
-                                Apresentação do KinesiOS na XR Experience do SVR2021 <br>
-                                 https://www.youtube.com/watch?v=C_QtT2FG7rg
+                                Confira a apresentação do KinesiOS na XR Experience do SVR2021.<a href="https://www.youtube.com/watch?v=C_QtT2FG7rg" target="_blank"</a> <br>
                             </h2>
-
                             <h3>
                                 Para suporte ou liberação de acesso ao sistema, envie um e-mail para
                                 <a href="mailto:bioxthica@gmail.com"> bioxthica@gmail.com</a>
