--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
                         <div class="block">
                             <h2 class="subtitle">O KinesiOS é um sistema de telereabilitação e reconhecimento
                                 de movimentos para avaliação motora e neurofuncional de pacientes em reabilitação
-                                pós-acidente vascular cerebral.<br>
-                            </h2>
-                            <p>
-                                Confira a apresentação do KinesiOS na XR Experience do SVR2021.<a href="https://www.youtube.com/watch?v=C_QtT2FG7rg" target="_blank"</a>
-                            </p>
+                                pós-acidente vascular cerebral.
                             <br>
+                                <a href="https://www.youtube.com/watch?v=C_QtT2FG7rg"> Confira a apresentação do KinesiOS na XR Experience do SVR2021</a>
+                            </h2>
                             <br>
                             <h3>
                                 Para suporte ou liberação de acesso ao sistema, envie um e-mail para
