--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
                         <div class="block">
                             <h2 class="subtitle">O KinesiOS é um sistema de telereabilitação e reconhecimento
                                 de movimentos para avaliação motora e neurofuncional de pacientes em reabilitação
-                                pós-acidente vascular cerebral.
-                            </h2>
-                            <br>
-                            <h2>
-                                <a href="https://www.youtube.com/watch?v=C_QtT2FG7rg"> Confira a apresentação do KinesiOS na XR Experience do SVR2021</a>
+                                pós-acidente vascular cerebral.<br><br>
+
+                                <a href="https://www.youtube.com/watch?v=C_QtT2FG7rg"> Confira a apresentação do
+                                    KinesiOS na XR Experience do SVR 2021.</a>
                             </h2>
                             <h3>
                                 Para suporte ou liberação de acesso ao sistema, envie um e-mail para
