--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                                 de movimentos para avaliação motora e neurofuncional de pacientes em reabilitação
                                 pós-acidente vascular cerebral.<br><br>
 
-                                <a href="https://www.youtube.com/watch?v=C_QtT2FG7rg"> Confira a apresentação do
+                                <a href="https://www.youtube.com/watch?v=C_QtT2FG7rg" target="_blank"> Confira a apresentação do
                                     KinesiOS na XR Experience do SVR 2021.</a>
                             </h2>
                             <h3>
