--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                 pós-acidente vascular cerebral.<br><br>
 
                                 <a href="https://www.youtube.com/watch?v=C_QtT2FG7rg" target="_blank"> Confira a apresentação do
-                                    KinesiOS na XR Experience do SVR 2021.</a>
+                                    KinesiOS na XR Experience do 23rd Symposium on Virtual and Augmented Reality.</a>
                             </h2>
                             <h3>
                                 Para suporte ou liberação de acesso ao sistema, envie um e-mail para
@@ -31,7 +31,7 @@
                         </div>
                         <div class="block buttons">
                             <a
-                                href="https://github.com/LRScudeletti/kinesios/releases/download/v1.0.11/KinesiOSSetup1.0.11.exe"><button
+                                href="https://github.com/LRScudeletti/kinesios-page/releases/download/v1.0.14/KinesiOSSetup1.0.14.exe"><button
                                     class="button is-white is-outlined" download>Download</button></a> &nbsp;
                         </div>
                     </div>
